Simplify search response
